--- a/templates/inputpage.html
+++ b/templates/inputpage.html
@@ -9,7 +9,7 @@
     
     <form method="post">
         <label for="inputfield">Input Something!</label>
-        <input name="inputfield" id="inputfield" required>
+        <input name="inputfield" id="inputfield" type="number" required>
         <input type="submit" value="Submit">
     </form>
 {% endblock %}
