--- a/templates/inputpage.html
+++ b/templates/inputpage.html
@@ -12,4 +12,6 @@
         <input name="inputfield" id="inputfield" type="number" required>
         <input type="submit" value="Submit">
     </form>
+    <iframe frameborder='0' width='255' height='405' src='//www.fueleconomy.gov/feg/widgets/find-a-car/facwidget.html'></iframe>
+    <iframe frameborder='0' width='265' height='375' src='//www.fueleconomy.gov/feg/widgets/gas-tips/tipwidget.html' ></iframe>
 {% endblock %}
