--- a/templates/base.html
+++ b/templates/base.html
@@ -5,15 +5,18 @@
     <title>{% block title %}{% endblock %} - Test</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
-    {% block header %}{% endblock %}
   </header>
   {% for message in get_flashed_messages() %}
     <div class="flash">{{ message }}</div>
   {% endfor %}
   <nav>
-    <p><a href="{{ url_for('index') }}" >Homepage</a></p>
-    <p><a href="{{ url_for('inputpage') }}" >Input page</a></p>
+    <ul>
+      <li><a href="{{ url_for('index') }}" >Homepage</a></li>
+      <li><a href="{{ url_for('inputpage') }}" >Input testing (to remove)</a></li>
+      <li><a href="{{ url_for('questionnaire') }}" >Questionnaire</a></li>
+    </ul>
   </nav>
+  {% block header %}{% endblock %}
   <body>
     <h1>Carbometer</h1>
     {% block content %}{% endblock %}
