Rename to foodquestionnaire

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a href="{{ url_for('index') }}" >Homepage</a></li>
       <li><a href="{{ url_for('inputpage') }}" >Input testing (to remove)</a></li>
-      <li><a href="{{ url_for('questionnaire') }}" >Questionnaire</a></li>
+      <li><a href="{{ url_for('foodquestionnaire') }}" >Questionnaire</a></li>
     </ul>
   </nav>
   {% block header %}{% endblock %}
