--- a/templates/foodquestionnaire.html
+++ b/templates/foodquestionnaire.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h1>{% block title %}Questionnaire{% endblock %}</h1>
+    <h1>{% block title %}Food Questionnaire{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
