--- a/templates/foodresults.html
+++ b/templates/foodresults.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block header %}
-    <h1>{% block title %}Food Results{% endblock %}</h1>
+<h1>{% block title %}Food CO2 Results{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-    <p>Your CO2 emissions from food: {{ total_co2 }}</p>
+<p>Your projected annual CO2 emissions from food (lbs): {{ foodco2 }}</p>
 {% endblock %}
