Renamed titles properly, extended base in 'more'

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,13 +31,13 @@
         <h3>MORE</h3>
       </span>
       <div class="dropdown-content">
-        <a href="{{ url_for('about') }}">
+        <a href="{{ url_for('more.about') }}">
           <h3>ABOUT</h3>
         </a>
-        <a href="{{ url_for('action') }}">
+        <a href="{{ url_for('more.action') }}">
           <h3>ACTION</h3>
         </a>
-        <a href="{{ url_for('sources') }}">
+        <a href="{{ url_for('more.sources') }}">
           <h3>SOURCES</h3>
         </a>
       </div>
@@ -57,9 +57,9 @@
       <a href="{{ url_for('utilities') }}">Utilities</a>
     </div>
     <div>
-      <a href="{{ url_for('about') }}">About</a>
-      <a href="{{ url_for('action') }}">Action</a>
-      <a href="{{ url_for('sources') }}">Sources</a>
+      <a href="{{ url_for('more.about') }}">About</a>
+      <a href="{{ url_for('more.action') }}">Action</a>
+      <a href="{{ url_for('more.sources') }}">Sources</a>
     </div>
   </footer>
 </body>
