--- a/templates/food.html
+++ b/templates/food.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}CLOTHING{% endblock %}
+{% block title %}FOOD{% endblock %}
 
 {% block css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='pages.css') }}">
