--- a/templates/food.html
+++ b/templates/food.html
@@ -16,7 +16,30 @@
         <!--blurb about calculator-->
     </div>
     <div id="p3">
-        <!--calculator-->
+        <form method="post">
+            <label for="beef">How many times a week do you have a serving of beef?</label>
+            <input name="beef" id="beef" type="number" required>
+            <label for="pork">How many times a week do you have a serving of pork?</label>
+            <input name="pork" id="pork" type="number" required>
+            <label for="poultry">How many times a week do you have a serving of poultry?</label>
+            <input name="poultry" id="poultry" type="number" required>
+            <label for="cheese">How many times a week do you have a serving of cheese?</label>
+            <input name="cheese" id="cheese" type="number" required>
+            <label for="eggs">How many times a week do you have a serving of eggs?</label>
+            <input name="eggs" id="eggs" type="number" required>
+            <label for="rice">How many times a week do you have a serving of rice?</label>
+            <input name="rice" id="rice" type="number" required>
+            <label for="legumes">How many times a week do you have a serving of legumes?</label>
+            <input name="legumes" id="legumes" type="number" required>
+            <label for="carrots">How many times a week do you have a serving of carrots?</label>
+            <input name="carrots" id="carrots" type="number" required>
+            <label for="potatoes">How many times a week do you have a serving of potatoes?</label>
+            <input name="potatoes" id="potatoes" type="number" required>
+            <input type="submit" value="Submit">
+        </form>
+        {% if request.method=='POST' %}
+        <p>Your projected annual CO2 emissions from food (lbs): {{ foodco2 }} </p>
+        {% endif %}
     </div>
 </section>
 {% endblock %}
