--- a/templates/food.html
+++ b/templates/food.html
@@ -13,7 +13,8 @@
         <!--pic/doodle-->
     </div>
     <div id="p2">
-        <!--blurb about calculator-->
+        The growing, processing, storing, transporting and disposing of foods all produce some amount of greenhouse gas. Food typically produces about 20% of a household’s total greenhouse gas emissions. 
+Different types of food produce differing amounts of greenhouse gases per serving. In this calculator, we have chosen some of the most commonly eaten foods to give you an estimate of your food-related carbon footprint. 
     </div>
     <div id="p3">
         <form method="post">
