--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -13,7 +13,7 @@
     <!--pic/doodle-->
   </div>
   <div id="p2">
-    <!--blurb about calculator-->
+    Huge amounts of water are needed to grow cotton for a piece of clothing, but most of our clothes are made from the polymer, polyester, for which 70 million barrels of oil are used annually to make. On top of making the materials for our clothes, sewing and transporting our clothes also produce greenhouse gases. The emissions from all of these actions combined make it so that the fashion industry to accounts for 10% of global carbon emissions, not to mention 20% of the waste water. 
   </div>
   <div id="p3">
     <!--calculator-->
