--- a/templates/utilities.html
+++ b/templates/utilities.html
@@ -13,7 +13,9 @@
         <!--pic/doodle-->
     </div>
     <div id="p2">
-        <!--blurb about calculator-->
+        Transportation is an essential part of our lifestyle, but most vehicles use gasoline or diesel, both of which release carbon dioxide into the atmosphere. Globally transportation accounts for 15-20% of emissions annually. 
+        
+        Emissions from electricity use can vary by the type of fuel source used and by the type of power plant. For instance, coal will release more CO2 than petroleum and natural gas, but nuclear, solar, wind, and hydroelectric don’t release any CO2. The time of day can effect the source of the electricity supplied to the power grid, which means that the carbon footprint of a person also depends on the time of day. In this calculator, we’re using an estimated, average value for the amount of CO2 released by a power plant.
     </div>
     <div id="p3">
         <!--calculator-->
