Added all calculators

--- a/templates/food.html
+++ b/templates/food.html
@@ -18,23 +18,23 @@
     <div id="p3">
         <form method="post">
             <label for="beef">How many times a week do you have a serving of beef?</label>
-            <input name="beef" id="beef" type="number" required>
+            <input name="beef" id="beef" type="number" required><br>
             <label for="pork">How many times a week do you have a serving of pork?</label>
-            <input name="pork" id="pork" type="number" required>
+            <input name="pork" id="pork" type="number" required><br>
             <label for="poultry">How many times a week do you have a serving of poultry?</label>
-            <input name="poultry" id="poultry" type="number" required>
+            <input name="poultry" id="poultry" type="number" required><br>
             <label for="cheese">How many times a week do you have a serving of cheese?</label>
-            <input name="cheese" id="cheese" type="number" required>
+            <input name="cheese" id="cheese" type="number" required><br>
             <label for="eggs">How many times a week do you have a serving of eggs?</label>
-            <input name="eggs" id="eggs" type="number" required>
+            <input name="eggs" id="eggs" type="number" required><br>
             <label for="rice">How many times a week do you have a serving of rice?</label>
-            <input name="rice" id="rice" type="number" required>
+            <input name="rice" id="rice" type="number" required><br>
             <label for="legumes">How many times a week do you have a serving of legumes?</label>
-            <input name="legumes" id="legumes" type="number" required>
+            <input name="legumes" id="legumes" type="number" required><br>
             <label for="carrots">How many times a week do you have a serving of carrots?</label>
-            <input name="carrots" id="carrots" type="number" required>
+            <input name="carrots" id="carrots" type="number" required><br>
             <label for="potatoes">How many times a week do you have a serving of potatoes?</label>
-            <input name="potatoes" id="potatoes" type="number" required>
+            <input name="potatoes" id="potatoes" type="number" required><br>
             <input type="submit" value="Submit">
         </form>
         {% if request.method=='POST' %}
