--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -16,15 +16,7 @@
     Huge amounts of water are needed to grow cotton for a piece of clothing, but most of our clothes are made from the polymer, polyester, for which 70 million barrels of oil are used annually to make. On top of making the materials for our clothes, sewing and transporting our clothes also produce greenhouse gases. The emissions from all of these actions combined make it so that the fashion industry to accounts for 10% of global carbon emissions, not to mention 20% of the waste water. 
     
     <br><br>
-    Steps to improve your carbon footprint: <br>
-    Buy second hand items. Thrifting clothes is not only a good way to find hidden fashionable-gems, but also a great way to reduce your individual carbon footprint from clothing manufacturing.
-    <br><br>
-    Buy from sustainable brands, such as Patagonia, Allbirds, Everlane, Girlfriend Collective, and many more. The few minutes of research to find sustainable clothing companies will help reduce your carbon footprint. Not to mention, you will feel better knowing that you are wearing a stylish and sustainable outfit. 
-    <br><br>
-    Do laundry at lower temperatures, air dry, and go to the dry cleaners less. All three of these actions reduce the amount of heating and electricity needed to clean one load of laundry, which helps to decrease your carbon footprint. 
-    <br><br>
-    Purchase classic pieces as opposed to trendy items. Over half of fast fashion items end up in landfills, and this means that more carbon is produced due to the increased manufacturing need to keep supply of items up with the fast fashion’s turnaround times.
-
+    
   </div>
   <div id="p3">
     <form method="post">
@@ -57,6 +49,16 @@
 
       <input type="submit" value="Submit">
     </form>
+    <br><br>
+    <b>Steps to improve your carbon footprint: </b><br>
+    Buy second hand items. Thrifting clothes is not only a good way to find hidden fashionable-gems, but also a great way to reduce your individual carbon footprint from clothing manufacturing.
+    <br><br>
+    Buy from sustainable brands, such as Patagonia, Allbirds, Everlane, Girlfriend Collective, and many more. The few minutes of research to find sustainable clothing companies will help reduce your carbon footprint. Not to mention, you will feel better knowing that you are wearing a stylish and sustainable outfit. 
+    <br><br>
+    Do laundry at lower temperatures, air dry, and go to the dry cleaners less. All three of these actions reduce the amount of heating and electricity needed to clean one load of laundry, which helps to decrease your carbon footprint. 
+    <br><br>
+    Purchase classic pieces as opposed to trendy items. Over half of fast fashion items end up in landfills, and this means that more carbon is produced due to the increased manufacturing need to keep supply of items up with the fast fashion’s turnaround times.
+
     {% if request.method=='POST' %}
     <p>Your projected annual CO2 emissions from clothing (lbs): {{ clothingco2 }} </p>
     {% endif %}
