--- a/templates/food.html
+++ b/templates/food.html
@@ -13,10 +13,15 @@
         <!--pic/doodle-->
     </div>
     <div id="p2">
-        The growing, processing, storing, transporting and disposing of foods all produce some amount of greenhouse gas. Food typically produces about 20% of a household’s total greenhouse gas emissions. 
-Different types of food produce differing amounts of greenhouse gases per serving. In this calculator, we have chosen some of the most commonly eaten foods to give you an estimate of your food-related carbon footprint. 
+        The growing, processing, storing, transporting and disposing of foods all produce some amount of greenhouse gas.
+        Food typically produces about 20% of a household’s total greenhouse gas emissions.
+        Different types of food produce differing amounts of greenhouse gases per serving. In this calculator, we have
+        chosen some of the most commonly eaten foods to give you an estimate of your food-related carbon footprint.
     </div>
     <div id="p3">
+        {% if request.method=='POST' %}
+        <p>Your projected annual CO2 emissions from food (lbs): {{ foodco2 }} </p>
+        {% else %}
         <form method="post">
             <label for="beef">How many times a week do you have a serving of beef?</label>
             <input name="beef" id="beef" type="number" required><br>
@@ -38,8 +43,6 @@ Different types of food produce differing amounts of greenhouse gases per servin
             <input name="potatoes" id="potatoes" type="number" required><br>
             <input type="submit" value="Submit">
         </form>
-        {% if request.method=='POST' %}
-        <p>Your projected annual CO2 emissions from food (lbs): {{ foodco2 }} </p>
         {% endif %}
     </div>
 </section>
