Fixed form hiding, footer edits and absolute

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,9 @@
       </div>
     </div>
   </nav>
-  {% block main %}{% endblock %}
+  <div id="content-wrap">
+    {% block main %}{% endblock %}
+  </div>
   <footer>
     <div>
       <h1>CARBOMETER</h1>
