--- a/static/main.css
+++ b/static/main.css
@@ -2,6 +2,9 @@ body {
     font-family: Helvetica, sans-serif;
     background-color: honeydew;
     margin: 0;
+
+    position: relative;
+    min-height: 100vh;
 }
 
 nav {
@@ -119,6 +122,10 @@ button:hover {
   color: white;
 }
 
+#content-wrap {
+  padding-bottom: 10rem;
+}
+
 footer {
   background-color: #2F4F4F;
   color: white;
@@ -128,11 +135,21 @@ footer {
   display: grid;
   grid-template-columns: 2fr 175px 100px;
   align-items: center;
+
+  height: 8rem;
+  width: calc(100% - 40px);
+  position: absolute;
+  bottom: 0;
 }
 
 footer a {
   color: white;
   display: block;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
 
 footer div {
