--- a/static/pages.css
+++ b/static/pages.css
@@ -2,6 +2,9 @@ body {
     font-family: Helvetica, sans-serif;
     background-color: honeydew;
     margin: 0;
+
+    position: relative;
+    min-height: 100vh;
 }
 
 nav {
@@ -83,6 +86,10 @@ section {
     grid-row: 1 / span 2;
 }
 
+#content-wrap {
+  padding-bottom: 10rem;
+}
+
 footer {
     background-color: #2F4F4F;
     color: white;
@@ -92,17 +99,28 @@ footer {
     display: grid;
     grid-template-columns: 2fr 175px 100px;
     align-items: center;
+
+    height: 8rem;
+    width: calc(100% - 40px);
+    position: absolute;
+    bottom: 0;
 }
   
 footer a {
     color: white;
     display: block;
+    text-decoration: none;
 }
-  
+
+footer a:hover {
+  text-decoration: underline;
+}
+
 footer div {
     line-height: 1.5em;
 }
 
 #busmodeform {
   visibility: hidden;
+  font-size: 1px;
 }
