Cleaned up + improvement blurbs

--- a/templates/clothing.html
+++ b/templates/clothing.html
@@ -24,7 +24,6 @@
   <div id="p3">
     {% if request.method=='POST' %}
     <p>Your projected annual CO2 emissions from clothing (lbs): {{ clothingco2 }} </p>
-    <!-- add css/other tags to the results display? -->
     {% else %}
     <form method="post">
       <label for="clothing_often">How often do you buy clothes in a year?</label><!-- more clarity -->
@@ -64,20 +63,25 @@
     {% endif %}
     <br><br>
     <b>Steps to improve your carbon footprint: </b><br>
-    Buy second hand items. Thrifting clothes is not only a good way to find hidden fashionable-gems, but also a great
-    way to reduce your individual carbon footprint from clothing manufacturing.
-    <br><br>
-    Buy from sustainable brands, such as Patagonia, Allbirds, Everlane, Girlfriend Collective, and many more. The few
-    minutes of research to find sustainable clothing companies will help reduce your carbon footprint. Not to mention,
-    you will feel better knowing that you are wearing a stylish and sustainable outfit.
-    <br><br>
-    Do laundry at lower temperatures, air dry, and go to the dry cleaners less. All three of these actions reduce the
-    amount of heating and electricity needed to clean one load of laundry, which helps to decrease your carbon
-    footprint.
-    <br><br>
-    Purchase classic pieces as opposed to trendy items. Over half of fast fashion items end up in landfills, and this
-    means that more carbon is produced due to the increased manufacturing need to keep supply of items up with the fast
-    fashion’s turnaround times.
+    <p>
+      Buy second hand items. Thrifting clothes is not only a good way to find hidden fashionable-gems, but also a great
+      way to reduce your individual carbon footprint from clothing manufacturing.
+    </p>
+    <p>
+      Buy from sustainable brands, such as Patagonia, Allbirds, Everlane, Girlfriend Collective, and many more. The few
+      minutes of research to find sustainable clothing companies will help reduce your carbon footprint. Not to mention,
+      you will feel better knowing that you are wearing a stylish and sustainable outfit.
+    </p>
+    <p>
+      Do laundry at lower temperatures, air dry, and go to the dry cleaners less. All three of these actions reduce the
+      amount of heating and electricity needed to clean one load of laundry, which helps to decrease your carbon
+      footprint.
+    </p>
+    <p>
+      Purchase classic pieces as opposed to trendy items. Over half of fast fashion items end up in landfills, and this
+      means that more carbon is produced due to the increased manufacturing need to keep supply of items up with the
+      fast fashion’s turnaround times.
+    </p>
   </div>
 </section>
 {% endblock %}
