--- a/templates/food.html
+++ b/templates/food.html
@@ -53,6 +53,19 @@
             <input type="submit" value="Submit">
         </form>
         {% endif %}
+        <br><br>
+        <b>Steps to improve your carbon footprint: </b><br>
+        <p>
+            Eat less meat! A UN report states that livestock farming alone produces 18% of the worldwide greenhouse gas
+            emissions. You can also substitute beef and pork, two of the largest CO2 emitting meats, with legumes and
+            other plant based proteins. By reducing your meat intake, you are effectively decreasing your contribution
+            towards one of the largest greenhouse gas emitting markets.
+        </p>
+        <p>
+            Eat locally grown items. Trucks, ships, and planes transporting the food you eat also emit greenhouse gases.
+            Although transporting the food is unavoidable, you can still reduce your emissions by buying locally
+            grown items, which would travel fewer miles and have fewer emissions as a result.
+        </p>
     </div>
 </section>
 {% endblock %}
