--- a/templates/utilities.html
+++ b/templates/utilities.html
@@ -60,6 +60,18 @@
             <input type="submit" value="Submit">
         </form>
         {% endif %}
+        <br><br>
+        <b>Steps to improve your carbon footprint: </b><br>
+        <p>
+            Carpooling, biking, walking, or using public transportation are all actions that can decrease your carbon
+            emissions because the more people travelling in one vehicle, the smaller the carbon footprint per person. If
+            you have to drive, switching to electric cars or cars that use low carbon fuels would be better.
+        </p>
+        <p>
+            Decreasing your heating and air conditioning use, turning off lights and electrical appliances when they’re
+            not in use, and using more energy-efficient lights, such as LEDs, are all steps you can take to reduce your
+            carbon footprint and electricity bill.
+        </p>
     </div>
 </section>
 {% endblock %}
